--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,13 +8,13 @@ on: [push]
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: macos-13
 
     strategy:
         matrix:
-          api-level: [30, 33]
+          api-level: [30, 34]
           target: [google_apis]
-          java-version: [11]
+          java-version: [17]
           architecture: [x86_64]
 
     steps:
